--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>MultiplicaTest</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="./assets/imgs/edit-tools.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
